Fix blog layout on mobile

--- a/src/styles/components/section.scss
+++ b/src/styles/components/section.scss
@@ -129,6 +129,8 @@
   }
 
   &__in_blog {
+    width: 100%;
+
     &:before {
       z-index: 1;
     }
